Bruker base_url for fpsak og fpinfo